--- a/hw06/hw06.tex
+++ b/hw06/hw06.tex
@@ -246,7 +246,7 @@
       is the $n$ by $n$ zero matrix, and $I$ is the $n$ by $n$ identity.
     \item Let
       \begin{align*}
-        x = \begin{bmatrix*} v_1 \\ v_1 \\ v_2 \\ v_2 \\ \vdots \\ v_n \\ v_n \end{bmatrix*}
+        x = \begin{bmatrix*} v_1 \\ v_2 \\ \vdots \\ v_n \end{bmatrix*}
       \end{align*}
 
       and
@@ -254,17 +254,17 @@
       \begin{align*}
         Q = \begin{bmatrix*} 
           0 & 0 & \dots & 0 & 0 \\
-          a_{21} H & 0 & \dots & 0 & 0 \\
-          a_{31} H & a_{32} H & \dots & 0 & 0 \\
+          a_{21} I & 0 & \dots & 0 & 0 \\
+          a_{31} I & a_{32} I & \dots & 0 & 0 \\
           \vdots & \vdots & \ddots & \vdots & \vdots \\
-          a_{n1} H & a_{n2} H & \dots & a_{n,n-1}H & 0 \\
+          a_{n1} I & a_{n2} I & \dots & a_{n,n-1} I & 0 \\
         \end{bmatrix*}
       \end{align*}
 
-      $x$ is a $2n^2$ length vector, and $Q$ is $2n^2$ by $2n^2$ matrix.  Each
-      entry in $Q$ above is either the $2n$ by $2n$ zero matrix, or the $2n$ by
-      $2n$ matrix $H$ defined in problem d.  When you take the product $x^T Q x$
-      you obtain the original formula.
+      $x$ is a $n^2$ length vector, and $Q$ is $n^2$ by $n^2$ matrix.  Each
+      entry in $Q$ above is either the $n$ by $n$ zero matrix, or the $n$ by $n$
+      identity matrix.  When you take the product $x^T Q x$ you obtain a version
+      of original formula which can be minimized to obtain the same solution.
     \end{enumerate}
   \end{problem}
 
@@ -273,6 +273,20 @@
       Implement and solve the MAX CUT quadratic program in octave for a complete
       graph with three vertices, with weights $a_{ij} > 0$ of your choice.
     \end{question}
+
+    My graph has vertices 1, 2, and 3.  Edges $(1,2)$ and $(1,3)$ have weight 1,
+    and edge $(2, 3)$ has weight 0.  My implementation of the quadratic program
+    from the previous problem can be found at \texttt{p4.m}.  It gives the
+    following output:
+
+    \begin{align*}
+      v_1 = \begin{bmatrix*} 0 \\ -141.42 \\ 0 \end{bmatrix*} &&
+      v_2 = \begin{bmatrix*} 0 \\ 100 \\ 0 \end{bmatrix*} &&
+      v_3 = \begin{bmatrix*} 0 \\ 100 \\ 0 \end{bmatrix*}
+    \end{align*}
+
+    Pretty much no matter how you slice it, $v_1$ is separated from $v_2$ and
+    $v_3$, which is the optimal max cut solution!
   \end{problem}
 
   \begin{problem}{5}
